test/files/invalid/aligned.fbs
struct Aligned (force_align: 16) {
  v: uint8;
}
